--- a/TODO.txt
+++ b/TODO.txt
@@ -7,8 +7,9 @@
 - ✅ Change contrast about orange and white and others
 - ✅ Show title ¿Quienes somos? when Click on About link 
 - ✅ Include tel and email type in contact page
-- ❌ make Visible title on images slides
-- ❌ Resize images
-- ❌ Optimize images
+- 🟢 make Visible title on images slides
+- ✅ Resize images
+- ✅ Optimize images
 - 🟢 add division on items in navbar because it looks like a text inline
 - 🟢 a designer friend prefer background blue on navbar
+- ❌ Optimize page according to google chrome developer tools
