--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,8 @@
 - ✅ Optimize images
 - 🟢 add division on items in navbar because it looks like a text inline
 - 🟢 a designer friend prefer background blue on navbar
-- 🟠 Optimize page according to google chrome developer tools
+- ✅ Optimize page according to google chrome developer tools
 - ✅ create favicon and review JS unused about coverage in Dev tools
 - 🟢 Create own arrows to avoid unnecesary use of fontAwesome because it has a coverage of 51,4%
+- ✅ Make page responsive
+- ❌ Deploy page online
