update task and solve lowercase in Somos word

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,3 +18,5 @@
 - 🟢 Create own arrows to avoid unnecesary use of fontAwesome because it has a coverage of 51,4%
 - ✅ Make page responsive
 - 🟠 Deploy page online to give feedback from users
+- ❌ Make more visible the navbar
+- ❌ Fix ortography with comas and colons
