--- a/TODO.txt
+++ b/TODO.txt
@@ -18,6 +18,6 @@
 - ✅ create favicon and review JS unused about coverage in Dev tools
 - 🟢 Create own arrows to avoid unnecesary use of fontAwesome because it has a coverage of 51,4%
 - ✅ Make page responsive
-- 🟠 Deploy page online to give feedback from users
-- ❌ Make more visible the navbar
-- ❓ Fix ortography with comas and colons
+- ✅ Deploy page online to give feedback from users
+- 🟢 Make more visible the navbar
+- ✅ Fix ortography with comas and colons
